--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -7,6 +7,7 @@ h3{
   margin: 0 0 2px 20px ;
 }
 a{
+  font-size: 16pt;
   margin: 10px;
 }
 .header {
@@ -190,4 +191,8 @@ ul li.checked::before {
   float: left;
   width: 17px;
   height: 17px;
+}
+.activNavig{
+  color: red;
+  font-weight: bolder;
 }
